name:                oauth-provider
version:             0.1.0.0
homepage:            https://github.com/gseitz/oauth-provider
license:             BSD3
license-file:        LICENSE
author:              Gerolf Seitz
maintainer:          gerolf.seitz@gmail.com
category:            Web

build-type:          Simple
cabal-version:       >=1.10


library
   exposed-modules:     Network.OAuth.Provider.OAuth1,
                        Network.OAuth.Provider.OAuth1.Types,
                        Network.OAuth.Provider.OAuth1.Internal,
                        Network.OAuth.Provider.OAuth1.Wai
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7,
                       bytestring >= 0.9,
                       wai >= 1.2,
                       wai-extra,
                       monadIO,
                       conduit,
                       SHA >=1.4 && <1.7,
                       http-types >= 0.8.3,
                       text,
                       base64-bytestring,
                       base16-bytestring,
                       attoparsec,
                       vault,
                       resourcet,
                       transformers,
                       mtl,
                       errors,
                       either,
                       containers,
                       lifted-base

  hs-source-dirs:      src
  ghc-options:         -Wall -Werror

  default-language:    Haskell2010

executable examples
  build-depends:      base >=4.6 && <4.7,
                      bytestring >= 0.9,
                      oauth-provider,
                      blaze-html,
                      wai,
                      wai-extra,
                      vault,
                      text,
                      http-types,
                      warp,
                      mtl,
                      transformers,
                      either,
                      resourcet,
                      monad-logger,
                      http-conduit,
                      network


  hs-source-dirs:     examples
  main-is:            Example.hs
  default-language:   Haskell2010

test-suite oauth-provider-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:      base >= 4.6 && <4.7,
                      bytestring,
                      HUnit,
                      tasty >= 0.8,
                      tasty-hunit,
                      http-types,
                      wai,
                      oauth-provider

  default-language:   Haskell2010
