name:                oauth-provider
version:             0.1.0.0
homepage:            https://github.com/gseitz/oauth-provider
license:             BSD3
license-file:        LICENSE
author:              Gerolf Seitz
maintainer:          gerolf.seitz@gmail.com
category:            Web

build-type:          Simple
cabal-version:       >=1.10


library
   exposed-modules:     Network.OAuth.Provider.OAuth1,
                        Network.OAuth.Provider.OAuth1.Types,
                        Network.OAuth.Provider.OAuth1.Internal
  -- other-modules:
  -- other-extensions:
  build-depends:       base               >=  4.6   &&  <  5,
                       attoparsec         >=  0.10  &&  <  0.14,
                       base16-bytestring  >=  0.1   &&  <  1.2,
                       base64-bytestring  >=  1     &&  <  2,
                       bytestring         >=  0.9   &&  <  0.11,
                       either             >=  4.0   &&  <  4.5,
                       errors             >=  1.4   &&  <  2.2,
                       http-types         >=  0.8   &&  <  1.0,
                       mtl                >=  2.1   &&  <  2.3,
                       SHA                >=  1.4   &&  <  1.7,
                       text               >=  0.11  &&  <  1.3,
                       transformers       >=  0.3   &&  <  0.6

  hs-source-dirs:      src
  ghc-options:         -Wall -Werror

  default-language:    Haskell2010




test-suite oauth-provider-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  other-modules:    UnitTests

  build-depends:      base            >=  4.6   &&  <  5,
                      bytestring      >=  0.9   &&  <  0.11,
                      HUnit,
                      oauth-provider  >=  0.1   &&  <  0.2,
                      tasty           >=  0.8,
                      tasty-hunit

  default-language:   Haskell2010
