name:                wai-oauth
version:             0.1.0.0
homepage:            https://github.com/gseitz/wai-oauth
license:             BSD3
license-file:        LICENSE
author:              Gerolf Seitz
maintainer:          gerolf.seitz@gmail.com
category:            Web

build-type:          Simple
cabal-version:       >=1.10


library
   exposed-modules:     Network.Wai.OAuth,
                        Network.Wai.OAuth.Types
  
  -- other-modules:       
  
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.6 && <4.7,
                       bytestring >= 0.9,
                       wai >= 1.2,
                       wai-extra,
                       monadIO,
                       conduit,
                       SHA >=1.4 && <1.7,
                       http-types >= 0.8.3,
                       text,
                       base64-bytestring,
                       base16-bytestring,
                       attoparsec,
                       vault,
                       resourcet,
                       transformers,
                       mtl,
                       errors,
                       either,
                       containers,
                       lifted-base
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
test-suite unit-tests
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test
    build-depends:  base >= 4.6 && <4.7,
                    bytestring,
                    HUnit,
                    tasty >= 0.8,
                    tasty-hunit,
                    http-types,
                    wai,
                    wai-oauth

  default-language: Haskell2010
